# tudelft_hackathon

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  PARTICIPANTS_TODO.md  README.md  build-dev-images.sh  hackathon.rosinstall  package.xml  setup.py
.github/workflows/: container.yaml
dockerfiles/: README.md  push-docker-images.sh
dockerfiles/ignition/: Dockerfile  README.md  entrypoint.sh
dockerfiles/ignition-ardusub/ignition-ardusub-foxy/: Dockerfile
dockerfiles/ignition-ardusub/ignition-ardusub-humble/: Dockerfile  entrypoint.sh
dockerfiles/ignition-foxy-ardusub/: Dockerfile  README.md  entrypoint.sh
dockerfiles/ignition-foxy-hackathon/: Dockerfile  README.md  entrypoint.sh
dockerfiles/ignition-foxy-hackathon-dev/: Dockerfile
dockerfiles/ignition-hackathon/ignition-hackathon-foxy/: README.md
dockerfiles/ignition-hackathon/ignition-hackathon-foxy-dev/: README.md  entrypoint.sh
dockerfiles/ignition-hackathon/ignition-hackathon-humble-dev/: Dockerfile
dockerfiles/ignition-nvidia/: Dockerfile  README.md
dockerfiles/ros-foxy-hackathon/: Dockerfile  README.md
dockerfiles/ros-foxy-hackathon-dev/: Dockerfile
dockerfiles/ros1-2-ignition/: README.md  setup-ign-ardupilot-sitl.sh
launch/: apm_config.yaml  bluerov.launch  bluerov.launch.py  bluerov_bringup.launch.py  bluerov_bringup_no_ign.launch.py  bluerov_ign_sim.launch.py  bluerov_record.launch  bluerov_record.launch.py  mavros_param.yaml
scripts/: bluerov_agent.py  potential_avoidance.py  random_wall_avoidance.py
worlds/: bluerov_world.world
(+26 files in other folders)
